# AB_AI

./: README.md
LlamaParse_and_SemanticChunker_and_Reranker/: pyproject.toml
v2/v2_notebook/: AB_Testing_RAG_Agent_v2.ipynb
v3/v3_app/: Dockerfile  README.md  check_dependencies.py  deploy_to_huggingface.py  process_data.py  requirements.txt
v3/v3_app/app/: app.py  app_1.py  app_2.py  debug.py
v3/v3_notebook/: v3_notebook.ipynb
v_3_notebook/: open-deep-research.ipynb  pyproject.toml
